--- a/styles.css
+++ b/styles.css
@@ -17,3 +17,15 @@ body {
     border-radius: 5px;
     box-shadow: 2px 3px #888888;
 }
+
+
+
+
+
+
+
+
+.container {
+    display: flex;
+    gap: 20px;
+}
