--- a/styles.css
+++ b/styles.css
@@ -52,9 +52,11 @@ body {
 }
 
 .image{
-    border-radius: 10px;
-   border: 2px solid red;
-    height: 400px;
+    border-radius: 20px;
+   border: 5px solid red;
+    height: 300px;
+    position: relative;
+    margin: 30px;
 }
 
 .link-button {
@@ -62,7 +64,6 @@ body {
     color: black;
     border: 1px solid gray;
     background-color: #f2f2f2;
-    padding: 5px;
     border-radius: 5px;
     box-shadow: 2px 3px #888888;
 }
@@ -123,6 +124,11 @@ body {
 div{
     display: flex;
     justify-content: center
+}
+
+form{
+    display: flex;
+    flex-direction: column;
 }
 
 
